--- a/pom.xml
+++ b/pom.xml
@@ -1,42 +1,47 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-	<modelVersion>4.0.0</modelVersion>
-	<groupId>de.mcs.blobstore</groupId>
-	<artifactId>BlobStore</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
-	<name>BlobStore</name>
-	<description>Blob storage build upon rocksDB with a WiscKey like storage system</description>
-	<url>www.rcarduino.de</url>
-	<dependencies>
-		<dependency>
-			<groupId>net.sourceforge.jmeasurement2</groupId>
-			<artifactId>JMeasurement</artifactId>
-			<version>1.1.225</version>
-		</dependency>
-		<dependency>
-			<groupId>org.rocksdb</groupId>
-			<artifactId>rocksdbjni</artifactId>
-			<version>6.3.6</version>
-		</dependency>
-		<dependency>
-			<groupId>log4j</groupId>
-			<artifactId>log4j</artifactId>
-			<version>1.2.17</version>
-		</dependency>
-		<dependency>
-			<groupId>commons-io</groupId>
-			<artifactId>commons-io</artifactId>
-			<version>2.6</version>
-		</dependency>
-		<dependency>
-			<groupId>org.yaml</groupId>
-			<artifactId>snakeyaml</artifactId>
-			<version>1.24</version>
-		</dependency>
-		<dependency>
-			<groupId>com.google.code.gson</groupId>
-			<artifactId>gson</artifactId>
-			<version>2.8.1</version>
-		</dependency>
-	</dependencies>
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+  <modelVersion>4.0.0</modelVersion>
+  <groupId>de.mcs.blobstore</groupId>
+  <artifactId>BlobStore</artifactId>
+  <version>0.0.1-SNAPSHOT</version>
+  <name>BlobStore</name>
+  <description>Blob storage build upon rocksDB with a WiscKey like storage system</description>
+  <url>www.rcarduino.de</url>
+  <dependencies>
+    <dependency>
+      <groupId>net.sourceforge.jmeasurement2</groupId>
+      <artifactId>JMeasurement</artifactId>
+      <version>1.1.225</version>
+    </dependency>
+    <dependency>
+      <groupId>org.rocksdb</groupId>
+      <artifactId>rocksdbjni</artifactId>
+      <version>6.3.6</version>
+    </dependency>
+    <dependency>
+      <groupId>log4j</groupId>
+      <artifactId>log4j</artifactId>
+      <version>1.2.17</version>
+    </dependency>
+    <dependency>
+      <groupId>commons-io</groupId>
+      <artifactId>commons-io</artifactId>
+      <version>2.6</version>
+    </dependency>
+    <dependency>
+      <groupId>org.yaml</groupId>
+      <artifactId>snakeyaml</artifactId>
+      <version>1.24</version>
+    </dependency>
+    <dependency>
+      <groupId>com.google.code.gson</groupId>
+      <artifactId>gson</artifactId>
+      <version>2.8.1</version>
+    </dependency>
+    <dependency>
+      <groupId>com.google.guava</groupId>
+      <artifactId>guava</artifactId>
+      <version>28.1-jre</version>
+    </dependency>
+  </dependencies>
 </project>
