- setting up license header
- generating FOSS license file
- starting implementing container files.

--- a/pom.xml
+++ b/pom.xml
@@ -1,47 +1,139 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>de.mcs.blobstore</groupId>
-  <artifactId>BlobStore</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
-  <name>BlobStore</name>
-  <description>Blob storage build upon rocksDB with a WiscKey like storage system</description>
-  <url>www.rcarduino.de</url>
-  <dependencies>
-    <dependency>
-      <groupId>net.sourceforge.jmeasurement2</groupId>
-      <artifactId>JMeasurement</artifactId>
-      <version>1.1.225</version>
-    </dependency>
-    <dependency>
-      <groupId>org.rocksdb</groupId>
-      <artifactId>rocksdbjni</artifactId>
-      <version>6.3.6</version>
-    </dependency>
-    <dependency>
-      <groupId>log4j</groupId>
-      <artifactId>log4j</artifactId>
-      <version>1.2.17</version>
-    </dependency>
-    <dependency>
-      <groupId>commons-io</groupId>
-      <artifactId>commons-io</artifactId>
-      <version>2.6</version>
-    </dependency>
-    <dependency>
-      <groupId>org.yaml</groupId>
-      <artifactId>snakeyaml</artifactId>
-      <version>1.24</version>
-    </dependency>
-    <dependency>
-      <groupId>com.google.code.gson</groupId>
-      <artifactId>gson</artifactId>
-      <version>2.8.1</version>
-    </dependency>
-    <dependency>
-      <groupId>com.google.guava</groupId>
-      <artifactId>guava</artifactId>
-      <version>28.1-jre</version>
-    </dependency>
-  </dependencies>
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<groupId>de.mcs.blobstore</groupId>
+	<artifactId>BlobStore</artifactId>
+	<version>0.0.1-SNAPSHOT</version>
+	<name>BlobStore</name>
+	<description>Blob storage build upon rocksDB with a WiscKey like storage system</description>
+	<url>www.rcarduino.de</url>
+	<properties>
+		<maven.surefire.skip>true</maven.surefire.skip>
+	</properties>
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>license-maven-plugin</artifactId>
+				<version>1.13</version>
+				<configuration>
+					<excludedScopes>test,provided</excludedScopes>
+					<sortArtifactByName>true</sortArtifactByName>
+					<excludedGroups>com.apiomat</excludedGroups>
+					<outputDirectory>src/main/resources</outputDirectory>
+					<useMissingFile>true</useMissingFile>
+					<missingFile>src/main/resources/THIRD-PARTY.missing</missingFile>
+					<failIfWarning>true</failIfWarning>
+				</configuration>
+				<executions>
+					<execution>
+						<id>generate-report</id>
+						<goals>
+							<goal>add-third-party</goal>
+						</goals>
+						<phase>validate</phase>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>com.mycila</groupId>
+				<artifactId>license-maven-plugin</artifactId>
+				<version>3.0</version>
+				<configuration>
+					<!-- Template location -->
+					<header>src/main/resources/fileHeader.txt</header>
+					<strictCheck>true</strictCheck>
+					<excludes>
+						<exclude>log/*</exclude>
+						<exclude>**/*.js</exclude>
+						<exclude>**/*.html</exclude>
+						<exclude>**/*.xml</exclude>
+						<exclude>**/*.txt</exclude>
+						<exclude>**/*.log</exclude>
+						<exclude>**/*.md</exclude>
+						<exclude>**/*.yml</exclude>
+						<exclude>.idea/**</exclude>
+						<exclude>.github/**</exclude>
+						<exclude>.git*</exclude>
+						<exclude>LICENSE</exclude>
+					</excludes>
+				</configuration>
+				<executions>
+					<execution>
+						<phase>validate</phase>
+						<goals>
+							<goal>format</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.3</version>
+				<configuration>
+					<source>1.8</source>
+					<target>1.8</target>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>3.0.0-M3</version>
+				<configuration>
+					<excludes>
+					</excludes>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
+	<dependencies>
+		<dependency>
+			<groupId>net.sourceforge.jmeasurement2</groupId>
+			<artifactId>JMeasurement</artifactId>
+			<version>1.1.225</version>
+		</dependency>
+		<dependency>
+			<groupId>org.rocksdb</groupId>
+			<artifactId>rocksdbjni</artifactId>
+			<version>6.3.6</version>
+		</dependency>
+		<dependency>
+			<groupId>log4j</groupId>
+			<artifactId>log4j</artifactId>
+			<version>1.2.17</version>
+		</dependency>
+		<dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>2.6</version>
+		</dependency>
+		<dependency>
+			<groupId>org.yaml</groupId>
+			<artifactId>snakeyaml</artifactId>
+			<version>1.24</version>
+		</dependency>
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.8.1</version>
+		</dependency>
+		<dependency>
+			<groupId>com.google.guava</groupId>
+			<artifactId>guava</artifactId>
+			<version>28.1-jre</version>
+		</dependency>
+		<dependency>
+			<groupId>org.junit.jupiter</groupId>
+			<artifactId>junit-jupiter-api</artifactId>
+			<version>5.4.1</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.junit.jupiter</groupId>
+			<artifactId>junit-jupiter-engine</artifactId>
+			<version>5.4.1</version>
+			<scope>test</scope>
+		</dependency>
+
+	</dependencies>
 </project>
